# via

./: CMakeLists.txt  Readme  via-doc  via-help
base/: CMakeLists.txt
base/plaintov/: CMakeLists.txt  plaintov.c  plaintov.man  x.pv
base/pngtov/: CMakeLists.txt  pngtov.c
base/pnmtov/: CMakeLists.txt  pnmtov.c  pnmtov.man
base/rawtov/: CMakeLists.txt  rawtov.c
base/vcatbands/: CMakeLists.txt  vcatbands.c  vcatbands.man
base/vcatobj/: CMakeLists.txt  vcatobj.c  vcatobj.man
base/vconvert/: CMakeLists.txt  vconvert.c  vconvert.man
base/vcrop/: CMakeLists.txt  vcrop.c  vcrop.man
base/vflip/: CMakeLists.txt  vflip.c  vflip.man
base/vimagehisto/: CMakeLists.txt  DispHisto.c  ImageHistogram.c  vimagehisto.c
base/vinvert/: CMakeLists.txt  vinvert.c  vinvert.man
base/vistat/: CMakeLists.txt  vistat.c  vistat.man
base/vnview/: Adjust.c  CMakeLists.txt  FsbGQS.c  FsbGQS.h  Vxview  attr.c  help.c  main.c  pref.c  view.c
base/vop/: CMakeLists.txt  vop.c  vop.man
base/vrotate/: CMakeLists.txt  Rotate.c  vrotate.c  vrotate.man
base/vselbands/: CMakeLists.txt  SelSlices.c  vselbands.c
base/vselect/: CMakeLists.txt  vselect.c  vselect.man
base/vsynth/: CMakeLists.txt  Synth.c  vsynth.c  vsynth.man
base/vtopgm/: CMakeLists.txt  vtopgm.c
base/vtopnm/: CMakeLists.txt  vtopnm.c  vtopnm.man
base/vxview/: CMakeLists.txt  Vxview  edge.c  file.c  main.c  view.c  vxview.h
cmake/Modules/: FindX11.cmake  FindX11_Xt.cmake
debian/: TODO  changelog  control  copyright  files  libvia-dev.install  libvia-doc.docs  libvia-doc.install  rules  via-bin.install  via-utils.install  watch
doc/: Doxyfile
include/: via.h  viadata.h
pgms/: CMakeLists.txt
pgms/vaniso2d/: CMakeLists.txt  vaniso2d.c
pgms/vaniso3d/: CMakeLists.txt  vaniso3d.c
pgms/vbinarize/: CMakeLists.txt  vbinarize.c
pgms/vbinmorph3d/: CMakeLists.txt  vbinmorph3d.c
pgms/vbinsize/: CMakeLists.txt  vbinsize.c
pgms/vcanny2d/: CMakeLists.txt  vcanny2d.c
pgms/vcanny3d/: CMakeLists.txt  vcanny3d.c
pgms/vcontrast/: CMakeLists.txt  vcontrast.c
pgms/vconvolve2d/: CMakeLists.txt  vconvolve2d.c
pgms/vconvolve3d/: CMakeLists.txt  kernel.pv  vconvolve3d.c
pgms/vcurvature/: CMakeLists.txt  vcurvature.c
pgms/vdelsmall/: CMakeLists.txt  vdelsmall.c
pgms/vderiche3d/: CMakeLists.txt  vderiche3d.c
pgms/vdist3d/: CMakeLists.txt  vdist3d.c  vdist3d.man
pgms/vgauss2d/: CMakeLists.txt  vgauss2d.c
pgms/vgauss3d/: CMakeLists.txt  vgauss3d.c
pgms/vgenus3d/: CMakeLists.txt  Morgenthaler.c  test.pv  vgenus3d.c  vgenus3d.man
pgms/vgreymorph3d/: CMakeLists.txt  vgreymorph3d.c
pgms/vhemi/: CMakeLists.txt  vhemi.c  vhemi.docu
pgms/vimage2graph/: CMakeLists.txt  vimage2graph.c
pgms/vimage2volumes/: CMakeLists.txt  vimage2volumes.c
pgms/visodata/: CMakeLists.txt  visodata.c
pgms/vkernel2d/: CMakeLists.txt  vkernel2d.c
pgms/vlabel2d/: CMakeLists.txt  vlabel2d.c
pgms/vlabel3d/: CMakeLists.txt  vlabel3d.c
pgms/vmedian3d/: CMakeLists.txt  vmedian3d.c
pgms/volumes2image/: CMakeLists.txt  volumes2image.c  volumes2image.man
pgms/volumeselect/: CMakeLists.txt  volumeselect.c  volumeselect.man
pgms/vquickmorph3d/: CMakeLists.txt  vquickmorph3d.c  vquickmorph3d.man
pgms/vscale2d/: CMakeLists.txt  vscale2d.c
pgms/vscale3d/: CMakeLists.txt  vscale3d.c
pgms/vselbig/: CMakeLists.txt  vselbig.c  vselbig.man
pgms/vskel2d/: CMakeLists.txt  Skel2d.c  vskel2d.c
pgms/vskel3d/: CMakeLists.txt  achar.v  lshape.v  vskel3d.c
pgms/vsmooth3d/: CMakeLists.txt  vsmooth3d.c
pgms/vthin3d/: CMakeLists.txt  vthin3d.c  x.pv
pgms/vtopoclass/: CMakeLists.txt  Junction.c  NumComp.c  NumComp.c.dfs  Topoclass.c  vtopoclass.c  vtopoclass.man
rpm/: via.spec
userdoc/: Doxyfile
userdoc/html/: files.html  index.html  plaintov_8c.html  pnmtov_8c.html  rawtov_8c.html  vaniso2d_8c.html  vaniso3d_8c.html  vbinarize_8c.html  vbinmorph3d_8c.html  vcanny2d_8c.html  vcanny3d_8c.html  vcat_8c.html  vcatbands_8c.html  vcontrast_8c.html  vconvert_8c.html  vconvolve2d_8c.html  vconvolve3d_8c.html  vcrop_8c.html  vcurvature_8c.html  vdelsmall_8c.html  vderiche3d_8c.html  vdist3d_8c.html  vflip_8c.html  vgauss3d_8c.html  vgenus3d_8c.html  vgreymorph3d_8c.html  vhemi_8c.html  vicp_8c.html  vimage2graph_8c.html  vimage2volumes_8c.html  vimagehisto_8c.html  vinvert_8c.html  visodata_8c.html  vistat_8c.html  vkernel2d_8c.html  vlabel2d_8c.html  vlabel3d_8c.html  vmedian3d_8c.html  volumes2image_8c.html  volumeselect_8c.html  (+15 more)
viaio/: Attr.c  BlockFileIO_1.c  BlockFileIO_2.c  CMakeLists.txt  Dictionary.c  FileIO.c  Fill.c  Flip.c  GetVersion.c  GraphType.c  History.c  Image.c  ImageType.c  Invert.c  List.c  Op.c  Option.c  Param.c  Stats.c  Transpose.c  Type.c  Volumes.c  VolumesType.c
vialib/: Aniso2d.c  Binarize.c  Binmorph3d.c  CDT3d.c  CMakeLists.txt  Canny.c  ChamferDist3d.c  Contrast.c  ContrastShortUByte.c  Convolve.c  Curvature.c  DeleteSmall.c  EuclideanDist3d.c  Filter.c  GraphPrune.c  Image2Graph.c  Isodata.c  Label2d.c  Label3d.c  Lee.c  Makefile.shared  Mask.c  Median.c  NNSample3d.c  NonmaxSuppression.c  Pixel.c  QuickMorph.c  Rotate2d.c  Sample2d.c  Sample3d.c  Sample3d.c.sav  Scale3d.c  SelectBig.c  ShapeMoments.c  Skel3d.c  Smooth3d.c  Spline.c  Thin3d.c  VPoint_hpsort.c  VolumesOps.c
vxlib/: CMakeLists.txt  Colormap.c  Dither.c  ImageDpy.c  RGBToGray.c  RenderVToX.c  VImageVieP.h  VImageView.c  VXDialog.c  VXImage.c  VXInit.c  VXInput.c  VXLine.c  VXMenu.c  VXMisc.c  VXOverlays.c  VXText.c
